[gd_scene load_steps=12 format=3 uid="uid://b1fxtl1vyr1qw"]

[ext_resource type="Script" path="res://scenes/monsters/monster_body.gd" id="1_xt35c"]
[ext_resource type="Texture2D" uid="uid://0wvksud1r2k5" path="res://assets/sprites/particles/White_Box_Half.png" id="2_jf7ig"]
[ext_resource type="Texture2D" uid="uid://b2504r27vref6" path="res://assets/sprites/enemies/naked_zombie/naked_zombie.png" id="2_jnj11"]
[ext_resource type="Script" path="res://scr/modules/health_node/health_node.gd" id="3_fxe7g"]
[ext_resource type="Script" path="res://scr/modules/hitbox_node/hitbox_node.gd" id="4_15x0k"]
[ext_resource type="Script" path="res://scr/modules/velocity_node/velocity_node.gd" id="5_hfg0l"]
[ext_resource type="Script" path="res://scr/modules/detection_node/detection_node.gd" id="6_2o51y"]
[ext_resource type="Script" path="res://scr/modules/effect_node/effect_node.gd" id="7_j34c8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lrqe"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihsoi"]
size = Vector2(26, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t08h4"]
size = Vector2(42, 24)

[node name="Monster_Body" type="CharacterBody2D" node_paths=PackedStringArray("health_node", "hitbox_node", "velocity_node", "detection_node", "effect_node") groups=["Monster"]]
collision_layer = 0
collision_mask = 0
motion_mode = 1
script = ExtResource("1_xt35c")
health_node = NodePath("Modules/Health_Node")
hitbox_node = NodePath("Modules/Hitbox_Node")
velocity_node = NodePath("Modules/Velocity_Node")
detection_node = NodePath("Modules/Detection_Node")
effect_node = NodePath("Modules/Effect_Node")

[node name="Collision_Shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4lrqe")
debug_color = Color(0.23793, 0.618422, 0.440188, 0.42)

[node name="Sprites" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Water_Clip" type="Sprite2D" parent="Sprites"]
position = Vector2(-9, -27)
scale = Vector2(0.164063, 0.21875)
texture = ExtResource("2_jf7ig")

[node name="Sprite" type="Sprite2D" parent="Sprites/Water_Clip"]
position = Vector2(0, 32)
scale = Vector2(9.14286, 6.85714)
texture = ExtResource("2_jnj11")

[node name="Modules" type="Node2D" parent="."]

[node name="Health_Node" type="Node" parent="Modules"]
script = ExtResource("3_fxe7g")

[node name="Hitbox_Node" type="Area2D" parent="Modules" node_paths=PackedStringArray("body")]
position = Vector2(-5, -16)
script = ExtResource("4_15x0k")
body = NodePath("../..")
metadata/_edit_group_ = true

[node name="Collision_Shape" type="CollisionShape2D" parent="Modules/Hitbox_Node"]
shape = SubResource("RectangleShape2D_ihsoi")
debug_color = Color(0.88, 0.2552, 0.2552, 0.419608)

[node name="Velocity_Node" type="Node" parent="Modules" node_paths=PackedStringArray("individual")]
script = ExtResource("5_hfg0l")
individual = NodePath("../..")

[node name="Detection_Node" type="Area2D" parent="Modules" node_paths=PackedStringArray("individual")]
position = Vector2(-5, 0)
collision_layer = 0
collision_mask = 4
script = ExtResource("6_2o51y")
individual = NodePath("../..")

[node name="Collision_Shape" type="CollisionShape2D" parent="Modules/Detection_Node"]
shape = SubResource("RectangleShape2D_t08h4")
debug_color = Color(0.530307, 0.2356, 0.62, 0.419608)

[node name="Effect_Node" type="Node2D" parent="Modules" node_paths=PackedStringArray("individual")]
script = ExtResource("7_j34c8")
individual = NodePath("../..")

[connection signal="damaged" from="Modules/Health_Node" to="." method="_on_health_node_damaged"]
[connection signal="died" from="Modules/Health_Node" to="." method="_on_health_node_died"]
[connection signal="healed" from="Modules/Health_Node" to="." method="_on_health_node_healed"]
